--- a/OrganizeItAll/Base.lproj/Main.storyboard
+++ b/OrganizeItAll/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -98,36 +99,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="iwB-qi-NdS">
-                                <rect key="frame" x="10" y="607" width="355" height="40"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" id="Who-ma-CVS">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8fq-b5-hPb">
-                                        <rect key="frame" x="0.0" y="0.0" width="85" height="40"/>
-                                        <color key="backgroundColor" red="0.91764705879999997" green="0.5568627451" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="85" id="3lX-L5-j3r"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
-                                        <state key="normal" title="Cancel">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="cancelItem:" destination="LF2-VH-jbP" eventType="touchUpInside" id="lGH-IR-1QN"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="245" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUw-Pn-mtf">
-                                        <rect key="frame" x="100" y="0.0" width="255" height="40"/>
-                                        <color key="backgroundColor" red="0.9167988896" green="0.55500900750000004" blue="0.54238045219999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
-                                        <state key="normal" title="Save">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="save:" destination="LF2-VH-jbP" eventType="touchUpInside" id="trh-Tz-hkR"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacingType="standard" id="iwB-qi-NdS">
+                                        <rect key="frame" x="10" y="599" width="353" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8fq-b5-hPb">
+                                                <rect key="frame" x="0.0" y="0.0" width="85" height="40"/>
+                                                <color key="backgroundColor" red="0.91764705879999997" green="0.5568627451" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="85" id="3lX-L5-j3r"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
+                                                <state key="normal" title="Cancel">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="cancelItem:" destination="LF2-VH-jbP" eventType="touchUpInside" id="lGH-IR-1QN"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="245" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUw-Pn-mtf">
+                                                <rect key="frame" x="93" y="0.0" width="260" height="40"/>
+                                                <color key="backgroundColor" red="0.9167988896" green="0.55500900750000004" blue="0.54238045219999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
+                                                <state key="normal" title="Save">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="save:" destination="LF2-VH-jbP" eventType="touchUpInside" id="trh-Tz-hkR"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
-                            </stackView>
+                                <viewLayoutGuide key="contentLayoutGuide" id="1jA-5X-fiK"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="hdS-xd-Vta"/>
+                            </scrollView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="YU3-TT-ETf">
                                 <rect key="frame" x="24" y="20" width="335" height="259"/>
                                 <subviews>
@@ -182,17 +192,14 @@
                         <constraints>
                             <constraint firstItem="YU3-TT-ETf" firstAttribute="top" secondItem="PnM-Wo-hAF" secondAttribute="top" constant="20" symbolic="YES" id="0C8-5v-07g"/>
                             <constraint firstItem="YU3-TT-ETf" firstAttribute="leading" secondItem="SrX-7G-ast" secondAttribute="leading" constant="24" id="7BQ-uu-71z"/>
-                            <constraint firstItem="SrX-7G-ast" firstAttribute="trailing" secondItem="iwB-qi-NdS" secondAttribute="trailing" constant="10" id="ADU-1W-JH4"/>
                             <constraint firstItem="YU3-TT-ETf" firstAttribute="trailing" secondItem="PnM-Wo-hAF" secondAttribute="trailingMargin" id="Lox-Ab-nU5"/>
-                            <constraint firstItem="iwB-qi-NdS" firstAttribute="leading" secondItem="SrX-7G-ast" secondAttribute="leading" constant="10" id="QDp-HV-jdJ"/>
                             <constraint firstItem="YU3-TT-ETf" firstAttribute="height" secondItem="PnM-Wo-hAF" secondAttribute="height" multiplier="0.4" id="Vb9-lj-EMR"/>
-                            <constraint firstItem="SrX-7G-ast" firstAttribute="bottom" secondItem="iwB-qi-NdS" secondAttribute="bottom" id="f1i-Oc-Cp0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SrX-7G-ast"/>
                     </view>
                     <connections>
                         <outlet property="btnSave" destination="uUw-Pn-mtf" id="FgD-ZY-M5E"/>
-                        <outlet property="constraintFromKyHeight" destination="f1i-Oc-Cp0" id="g0Z-0Z-UII"/>
+                        <outlet property="kbHandlingScrollview" destination="Who-ma-CVS" id="Mhm-Wo-owe"/>
                         <outlet property="lblHeader" destination="ILl-ip-dbA" id="vQZ-7g-cUs"/>
                         <outlet property="tfTitle" destination="RF1-Tc-cVy" id="YOc-Ts-aHL"/>
                         <outlet property="tvDescription" destination="CZD-VD-BHc" id="oUZ-tz-dca"/>
@@ -200,7 +207,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NAA-pP-rYQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2519" y="802"/>
+            <point key="canvasLocation" x="2517.5999999999999" y="801.94902548725645"/>
         </scene>
         <!--Edit List View Controller-->
         <scene sceneID="fYb-J1-T1M">
