--- a/OrganizeItAll/Base.lproj/Main.storyboard
+++ b/OrganizeItAll/Base.lproj/Main.storyboard
@@ -142,16 +142,13 @@
                                 <rect key="frame" x="24" y="20" width="335" height="259"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ILl-ip-dbA">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="31" id="hy6-b5-6HT"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="31.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="23"/>
                                         <color key="textColor" red="0.73903375859999998" green="0.44572859999999997" blue="0.42557519669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WK5-FU-4vQ">
-                                        <rect key="frame" x="0.0" y="47" width="335" height="31"/>
+                                        <rect key="frame" x="0.0" y="47.5" width="335" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="QG5-jt-Agq"/>
                                         </constraints>
@@ -160,12 +157,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RF1-Tc-cVy">
-                                        <rect key="frame" x="0.0" y="94" width="335" height="34"/>
+                                        <rect key="frame" x="0.0" y="94.5" width="335" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRg-R5-YbE">
-                                        <rect key="frame" x="0.0" y="144" width="335" height="31"/>
+                                        <rect key="frame" x="0.0" y="144.5" width="335" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="MY0-9z-PtZ"/>
                                         </constraints>
@@ -174,7 +171,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="246" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="CZD-VD-BHc">
-                                        <rect key="frame" x="0.0" y="191" width="335" height="68"/>
+                                        <rect key="frame" x="0.0" y="191.5" width="335" height="67.5"/>
                                         <color key="backgroundColor" red="0.91764705879999997" green="0.5568627451" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
@@ -187,6 +184,11 @@
                                     </textView>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LQH-wS-yk5" customClass="CustomStackview" customModule="OrganizeItAll" customModuleProvider="target">
+                                <rect key="frame" x="20" y="259" width="335" height="259"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
