clips to bounds

--- a/OrganizeItAll/Base.lproj/Main.storyboard
+++ b/OrganizeItAll/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="eRb-eK-LI0">
+                        <view key="tableHeaderView" clipsSubviews="YES" contentMode="scaleToFill" id="eRb-eK-LI0">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             <subviews>
